# surface-morphometrics-gui

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirement.txt  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
GUI_docs/: .gitignore
GUI_docs/docs/: index.md
GUI_docs/docs/features/: resume-experiment.md
GUI_docs/docs/tutorials/: visualization.md
about/: index.html
docs/: about.md  index.md
docs/features/: new-experiment.md  resume-experiment.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: curvature-analysis.md  distance-orientation.md  experiment-setup.md  mesh-generation.md  resuming-experiments.md  visualization.md
docs/tutorials/: pipeline.md
features/new-experiment/: index.html
features/resume-experiment/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/curvature-analysis/: index.html
guide/distance-orientation/: index.html
guide/experiment-setup/: index.html
guide/mesh-generation/: index.html
guide/resuming-experiments/: index.html
guide/visualization/: index.html
search/: search_index.json
src/: environment.yml  experiment_manager.py  main.py  morphometrics_config.py
src/jobs/: distance_tab.py  mesh_tab.py  pycurv_tab.py  seg_to_mesh.py
src/plugins/: custom_vedo_cutter.py  mesh_info_utils.py  mesh_viewer.py  mesh_viewer_plugin.py  protein.py  tomoslice_plugin.py  vedo_bridge_plugin.py
src/surface_morphometrics_gui/: _cli.py  experiment_manager.py  main.py
src/surface_morphometrics_gui/jobs/: distance_tab.py  mesh_tab.py  pycurv_tab.py  refinement_tab.py  thickness_tab.py
src/surface_morphometrics_gui/plugins/: mesh_viewer.py  mesh_viewer_plugin.py
src/surface_morphometrics_gui/utils/: cli_import.py  script_resolver.py
src/surface_morphometrics_gui/widgets/: cli_import_dialog.py
src/utils/: archive_utils.py  cli_import.py  script_resolver.py
src/widgets/: cli_import_dialog.py  job_status.py
tests/: conftest.py  pytest.ini  test_archive_utils.py  test_config_widgets.py  test_config_yaml.py  test_distance_tab.py  test_experiment_manager.py  test_job_status.py  test_known_bugs.py  test_mesh_info_utils.py  test_mesh_tab.py  test_protein.py  test_pycurv_tab.py  test_refinement_tab.py  test_thickness_tab.py
tutorials/pipeline/: index.html
tutorials/visualization/: index.html
