[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "surface-morphometrics-gui"
version = "0.1.0"
description = "Graphical interface for the surface morphometrics pipeline (cryo-ET membrane ultrastructure analysis)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    # GUI layer
    "napari",
    "magicgui",
    "qtpy",
    "napari-tomoslice",
    "ruamel.yaml",
    # I/O
    "mrcfile",
    "starfile",
    # data / plotting
    "matplotlib",
    "pandas",
    "scikit-image",
    # Heavy, shared with the pipeline env — left loose so an existing
    # `morphometrics` environment's versions are reused rather than upgraded.
    "numpy",
    "vtk",
    "libigl<2.5.0",
]

[project.scripts]
surface-morphometrics-gui = "surface_morphometrics_gui.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["surface_morphometrics_gui*"]
